--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.14</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.cloud</groupId>-->
-			<!--<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.retry</groupId>-->
 			<!--<artifactId>spring-retry</artifactId>-->
